[package]
name = "dmtrd"
version = "0.1.0-alpha.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
futures = "0.3.28"
k8s-openapi = { version = "0.19.0", features = ["v1_27"] }
kube = { version = "0.85.0", features = ["runtime", "derive"] }
schemars = "0.8.12"
serde = "1.0.183"
serde_json = "1.0.104"
serde_yaml = "0.9.25"
thiserror = "1.0.44"
tokio = { version = "1.30.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
anymap = "0.12.1"
hex = { version = "0.4.3", features = ["serde"] }
config = "0.13.3"
clap = { version = "4.3.22", features = ["derive"] }
base64 = "0.21.2"
tonic = "0.9.2"
argon2 = "0.5.2"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite"] }
#dmtri = { version = "0.1.0", git = "https://github.com/demeter-run/specs.git" }
dmtri = { version = "0.1.0", path = "../specs/gen/rust" }
bech32 = "0.9.1"
tonic-reflection = "^0.9"
protoc-wkt = "1.0.0"
uuid = { version = "1.6.1", features = ["v4"] }
